--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us</title>
   <link rel="stylesheet" href="../assets/style.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
@@ -12,72 +13,83 @@
 <div id="header"></div>
 <script src="../pages/layout/header.js"></script>
 
-
-<!-- PAGE WRAPPER -->
 <section class="contact-section">
 
-  <h2 class="title">Connect <span>With Us</span></h2>
+  <h2 class="title">Connect With Us</h2>
   <p class="subtitle">Thanks for your interest in Ezypayment. We are excited to serve you & ready to tell your brand story.</p>
 
   <div class="contact-container">
 
-    <!-- Left Image -->
+    <!-- LEFT IMAGE -->
     <div class="left-img">
-      <img src="https://via.placeholder.com/400x450" alt="Contact" />
+      <img src="https://via.placeholder.com/400x450" alt="Contact">
     </div>
 
-    <!-- Contact Form -->
+    <!-- CONTACT FORM -->
     <div class="contact-form">
-      <div class="row">
-        <input type="text" placeholder="Enter Name" />
-        <input type="email" placeholder="Enter Email" />
+      <div class="two-input">
+        <div>
+          <label>Name</label>
+          <input type="text" placeholder="Enter Name">
+        </div>
+        <div>
+          <label>Email</label>
+          <input type="email" placeholder="Enter Email">
+        </div>
       </div>
 
-      <div class="row">
-        <input type="text" placeholder="Enter Mobile No." />
+      <div class="one-input">
+        <label>Mobile</label>
+        <input type="text" placeholder="Enter Mobile No.">
       </div>
 
-      <textarea placeholder="Enter Message"></textarea>
+      <div class="one-input">
+        <label>Message</label>
+        <textarea placeholder="Enter Message"></textarea>
+      </div>
+<button type="submit" class="send-btn small" id="submitBtn">
+  Send a Message
+  <div class="loader"></div>
+</button>
 
-      <button class="send-btn">Send a Message</button>
     </div>
 
-    <!-- Right Contact Cards -->
-  <div class="info-cards">
+    <!-- RIGHT SIDE INFO BOXES -->
+    <div class="info-boxes">
 
-  <div class="card">
-  <div class="icon"></div>
-  <div class="content">
-    <p class="label">Contact us:</p>
-    <p class="value">1800 570 7737</p>
-  </div>
-</div>
+      <!-- PHONE BOX -->
+      <div class="info-box">
+        <span class="info-circle"><i class="fa fa-phone"></i></span>
+        <div>
+          <small>Contact us:</small><br>
+          <strong>1800 570 7737</strong>
+        </div>
+      </div>
 
+      <!-- EMAIL BOX -->
+      <div class="info-box">
+        <span class="info-circle"><i class="fa fa-envelope"></i></span>
+        <div>
+          <small>Email us:</small>
+          <div class="email-section">
+            <p><strong>Support:</strong><br> onboarding@wonderpaytec.com</p>
+            <hr>
+            <p><strong>HR:</strong><br> hr@wonderpaytec.com</p>
+          </div>
+        </div>
+      </div>
 
-  <div class="card">
-    <div class="icon">✉️</div>
-    <div class="content">
-      <p class="label">Support:</p>
-      <p class="value">onboarding@wonderpaytec.com</p>
+      <!-- WHATSAPP BOX -->
+      <div class="info-box">
+        <span class="info-circle"><i class="fa-brands fa-whatsapp"></i></span>
+        <div>
+          <small>Whatsapp us:</small><br>
+          <strong>+91 81074 27787</strong>
+        </div>
+      </div>
 
-      <p class="label">HR:</p>
-      <p class="value">hr@wonderpaytec.com</p>
     </div>
   </div>
-
-  <div class="card">
-    <div class="icon">💬</div>
-    <div class="content">
-      <p class="label">Whatsapp us:</p>
-      <p class="value">+91 81074 27787</p>
-    </div>
-  </div>
-
-</div>
-
-
-  </div>
-
 </section>
 
 </body>
