--- a/pages/signup.html
+++ b/pages/signup.html
@@ -58,7 +58,7 @@
       <button class="login-btn">Continue</button>
 
       <p class="signup-text">
-        Already have an account? <a href="login.html">Sign In</a>
+        Already have an account? <a href="login.html">Login</a>
       </p>
 
     </div>
